gcc/testsuite/g++.dg/modules/legacy-0a.H
// { dg-additional-options "-fmodules-legacy=<sys" }
// { dg-error "is ill-formed" "" { target *-*-* } 0 }
